--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_DB: mymoviesstatss
+      POSTGRES_DB: mymoviesstats
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: aSdj21Admin
     volumes:
